--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.5"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3"
   }
 }
